# AgenticAl

./: .env  pyproject.toml  requirement.txt
server/: client.py  mass.json  mass.py  mathserver.py
