[project]
name = "mcpproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.8",
    "mass-ts>=0.1.4",
    "mcp-use>=1.3.3",
    "mcp[cli]>=1.9.4",
]
